[gd_scene load_steps=33 format=3 uid="uid://d1bce2bn51kgf"]

[ext_resource type="Script" path="res://Characters/enemies_4.gd" id="1_t86g4"]
[ext_resource type="Script" path="res://Characters/damageable.gd" id="2_mwiog"]
[ext_resource type="Texture2D" uid="uid://ch825qjmm1m7j" path="res://Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Attack/Attack-Sheet.png" id="2_n0f4r"]
[ext_resource type="Texture2D" uid="uid://c6v5sy8j8iw21" path="res://Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Fly/Fly-Sheet.png" id="3_icx6h"]
[ext_resource type="Texture2D" uid="uid://itglypqtoch6" path="res://Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Hit/Hit-Sheet.png" id="4_afw73"]
[ext_resource type="Script" path="res://Characters/player_death.gd" id="6_klx7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khqx7"]
size = Vector2(11.7631, 11.7751)

[sub_resource type="AtlasTexture" id="AtlasTexture_adtaa"]
atlas = ExtResource("2_n0f4r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_meul6"]
atlas = ExtResource("2_n0f4r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vggw6"]
atlas = ExtResource("2_n0f4r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glby8"]
atlas = ExtResource("2_n0f4r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_skjkm"]
atlas = ExtResource("3_icx6h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ycf"]
atlas = ExtResource("3_icx6h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm827"]
atlas = ExtResource("3_icx6h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnavw"]
atlas = ExtResource("3_icx6h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyqmt"]
atlas = ExtResource("3_icx6h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbudp"]
atlas = ExtResource("3_icx6h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n52ap"]
atlas = ExtResource("3_icx6h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vhna"]
atlas = ExtResource("3_icx6h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_meb6e"]
atlas = ExtResource("4_afw73")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rtoy"]
atlas = ExtResource("4_afw73")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddnwe"]
atlas = ExtResource("4_afw73")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i77k7"]
atlas = ExtResource("4_afw73")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mqjk4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adtaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meul6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vggw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glby8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skjkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ycf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm827")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnavw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skjkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ycf")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyqmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbudp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n52ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vhna")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_meb6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rtoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddnwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i77k7")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6xdxq"]
radius = 134.245

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1moi7"]
size = Vector2(27.2704, 17.8328)

[sub_resource type="Animation" id="Animation_i58f7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerDeath/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m0g27"]
resource_name = "attack"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Walk", &"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerDeath/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_j8iqj"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerDeath/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_122v1"]
_data = {
"RESET": SubResource("Animation_i58f7"),
"attack": SubResource("Animation_m0g27"),
"walk": SubResource("Animation_j8iqj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhpsl"]
size = Vector2(25.2683, 17.9069)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6rjh"]
size = Vector2(25.2683, 17.1906)

[node name="enemies_4" type="CharacterBody2D"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, 2)
scale = Vector2(1.58301, 1.39611)
collision_layer = 32772
collision_mask = 70
script = ExtResource("1_t86g4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.79025, 1.79069)
scale = Vector2(0.859238, 0.790786)
shape = SubResource("RectangleShape2D_khqx7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.15854, 1.43255)
scale = Vector2(0.759942, 0.673113)
sprite_frames = SubResource("SpriteFrames_mqjk4")
animation = &"Walk"
frame = 3
metadata/_edit_lock_ = true

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_mwiog")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1.89512, 1.43255)
shape = SubResource("CircleShape2D_6xdxq")
metadata/_edit_lock_ = true

[node name="PlayerDeath" type="Area2D" parent="."]
position = Vector2(-0.631707, 1.43255)
scale = Vector2(0.926584, 0.963989)
collision_layer = 32
script = ExtResource("6_klx7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(5.45408, 2.02324e-06)
shape = SubResource("RectangleShape2D_1moi7")
disabled = true
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_122v1")
}
autoplay = "walk"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.42196, 1.43255)
shape = SubResource("RectangleShape2D_nhpsl")
metadata/_edit_lock_ = true

[node name="Slash_detection" type="Area2D" parent="."]
collision_layer = 2097152
collision_mask = 1048576

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slash_detection"]
position = Vector2(4.42196, 1.43255)
shape = SubResource("RectangleShape2D_w6rjh")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="area_exited" from="PlayerDeath" to="PlayerDeath" method="_on_area_exited"]
[connection signal="body_entered" from="PlayerDeath" to="PlayerDeath" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="PlayerDeath" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Slash_detection" to="." method="_on_slash_detection_body_entered"]
